tests/typechecker/should_pass/reuse_keywords.csp
endmodule' = 2
P = endmodule' + 1

endmoduleX = 2
Q = endmoduleX + 1
