tests/typechecker/should_fail/duplicated_definitions_function.csp
P(x) = 2

Q(x) = 4

P(x) = x+1